[modify]批量替换，将dip地换位dp

--- a/taixinkanghu/src/main/res/drawable-mdpi/bg_list_select_screening.xml
+++ b/taixinkanghu/src/main/res/drawable-mdpi/bg_list_select_screening.xml
@@ -6,7 +6,7 @@
             <item>
                 <shape>
                     <solid android:color="@android:color/white" />
-                    <padding android:left="15.0dip" android:right="15.0dip" />
+                    <padding android:left="15dp" android:right="15dp" />
                 </shape>
             </item>
         </layer-list>
@@ -16,7 +16,7 @@
             <item>
                 <shape>
                     <solid android:color="#ffeeeeee" />
-                    <padding android:left="15.0dip" android:right="15.0dip" />
+                    <padding android:left="15dp" android:right="15dp" />
                 </shape>
             </item>
         </layer-list>
