--- a/taixinkanghu/src/main/res/layout/activity_nurs_order_reviews.xml
+++ b/taixinkanghu/src/main/res/layout/activity_nurs_order_reviews.xml
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal"
-                android:paddingBottom="10.0dip">
+                android:paddingBottom="10dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -33,14 +33,14 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="120dip"
+                        android:layout_height="120dp"
                         android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="40dip"
+                            android:layout_marginLeft="40dp"
                             android:layout_weight="1"
                             android:text="护理员：" />
 
@@ -49,16 +49,16 @@
                             android:layout_height="100dp"
                             android:layout_centerInParent="true"
                             android:layout_gravity="center_vertical"
-                            android:layout_marginRight="10dip"
+                            android:layout_marginRight="10dp"
                             android:src="@mipmap/face_img"
                             app:border_color="@color/main_color"
-                            app:border_width="0.5dip" />
+                            app:border_width="0.5dp" />
 
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
-                            android:layout_marginRight="40dip"
+                            android:layout_marginRight="40dp"
                             android:layout_weight="1"
                             android:orientation="vertical">
 
@@ -85,12 +85,12 @@
                         android:layout_height="match_parent"
                         android:background="@drawable/bg_bule_frame"
                         android:orientation="vertical"
-                        android:paddingTop="10.0dip">
+                        android:paddingTop="10dp">
 
                         <TextView
                             android:layout_width="match_parent"
-                            android:layout_height="30dip"
-                            android:layout_marginLeft="30dip"
+                            android:layout_height="30dp"
+                            android:layout_marginLeft="30dp"
                             android:layout_weight="1"
                             android:text="服务评价"
                             android:textColor="@color/text_color_black"
@@ -98,7 +98,7 @@
 
                         <TextView
                             android:layout_width="match_parent"
-                            android:layout_height="0.5dip"
+                            android:layout_height="0.5dp"
                             android:background="#ffd2d2d2" />
 
                         <LinearLayout
@@ -110,7 +110,7 @@
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:layout_marginTop="10dip"
+                                android:layout_marginTop="10dp"
                                 android:layout_weight="1"
                                 android:orientation="vertical">
 
@@ -118,7 +118,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginLeft="70dip"
+                                    android:layout_marginLeft="70dp"
                                     android:layout_weight="1"
                                     android:gravity="center_vertical"
                                     android:text="非常满意"
@@ -128,7 +128,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginLeft="70dip"
+                                    android:layout_marginLeft="70dp"
                                     android:layout_weight="1"
                                     android:gravity="center_vertical"
                                     android:text="满意"
@@ -138,7 +138,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginLeft="70dip"
+                                    android:layout_marginLeft="70dp"
                                     android:layout_weight="1"
                                     android:gravity="center_vertical"
                                     android:text="一般"
@@ -151,7 +151,7 @@
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:layout_marginTop="10dip"
+                                android:layout_marginTop="10dp"
                                 android:layout_weight="1"
                                 android:orientation="vertical">
 
@@ -159,39 +159,39 @@
                                 <RadioGroup
                                     android:layout_width="match_parent"
                                     android:layout_height="match_parent"
-                                    android:layout_marginTop="10dip"
+                                    android:layout_marginTop="10dp"
                                     android:layout_weight="1"
                                     android:orientation="vertical">
 
                                     <RadioButton
                                         style="@style/home_radio_button_style"
-                                        android:layout_width="20.0dip"
-                                        android:layout_height="20dip"
+                                        android:layout_width="20dp"
+                                        android:layout_height="20dp"
                                         android:background="@drawable/bg_radio_button_tick" />
 
                                     <ImageView
                                         android:layout_width="match_parent"
-                                        android:layout_height="10.0dip" />
+                                        android:layout_height="10dp" />
 
                                     <RadioButton
                                         style="@style/home_radio_button_style"
-                                        android:layout_width="20.0dip"
-                                        android:layout_height="20dip"
+                                        android:layout_width="20dp"
+                                        android:layout_height="20dp"
                                         android:background="@drawable/bg_radio_button_tick" />
 
                                     <ImageView
                                         android:layout_width="match_parent"
-                                        android:layout_height="10.0dip" />
+                                        android:layout_height="10dp" />
 
                                     <RadioButton
                                         style="@style/home_radio_button_style"
-                                        android:layout_width="20.0dip"
-                                        android:layout_height="20dip"
+                                        android:layout_width="20dp"
+                                        android:layout_height="20dp"
                                         android:background="@drawable/bg_radio_button_tick" />
 
                                     <ImageView
                                         android:layout_width="match_parent"
-                                        android:layout_height="10.0dip" />
+                                        android:layout_height="10dp" />
 
 
                                 </RadioGroup>
@@ -199,22 +199,22 @@
 
                                 <!--<ImageView-->
                                 <!--android:id="@id/history_img"-->
-                                <!--android:layout_width="20.0dip"-->
-                                <!--android:layout_height="20.0dip"-->
+                                <!--android:layout_width="20dp"-->
+                                <!--android:layout_height="20dp"-->
                                 <!--android:layout_weight="1"-->
                                 <!--android:src="@drawable/btn_pay_select" />-->
 
                                 <!--<ImageView-->
                                 <!--android:id="@id/history_img"-->
-                                <!--android:layout_width="20.0dip"-->
-                                <!--android:layout_height="20.0dip"-->
+                                <!--android:layout_width="20dp"-->
+                                <!--android:layout_height="20dp"-->
                                 <!--android:layout_weight="1"-->
                                 <!--android:src="@drawable/btn_pay_select" />-->
 
                                 <!--<ImageView-->
                                 <!--android:id="@id/history_img"-->
-                                <!--android:layout_width="20.0dip"-->
-                                <!--android:layout_height="20.0dip"-->
+                                <!--android:layout_width="20dp"-->
+                                <!--android:layout_height="20dp"-->
                                 <!--android:layout_weight="1"-->
                                 <!--android:src="@drawable/btn_pay_select" />-->
 
@@ -229,10 +229,10 @@
                     <EditText
                         android:id="@id/content"
                         android:layout_width="match_parent"
-                        android:layout_height="100.0dip"
-                        android:layout_marginLeft="20.0dip"
-                        android:layout_marginRight="20.0dip"
-                        android:layout_marginTop="20dip"
+                        android:layout_height="100dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginTop="20dp"
                         android:gravity="top|left|center"
                         android:hint="说点什么" />
 
@@ -250,26 +250,26 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="48.0dip"
+        android:layout_height="48dp"
         android:orientation="horizontal">
 
         <Button
             android:id="@id/btn_goto_main"
-            android:layout_width="80dip"
-            android:layout_height="48.0dip"
+            android:layout_width="80dp"
+            android:layout_height="48dp"
             android:background="@drawable/bg_btn_main_color"
             android:text="首页"
             android:textColor="#ffffffff"
             android:textSize="20.0sp" />
 
         <View
-            android:layout_width="0.5dip"
+            android:layout_width="0.5dp"
             android:layout_height="match_parent" />
 
         <Button
             android:id="@id/btn_submit"
             android:layout_width="wrap_content"
-            android:layout_height="48.0dip"
+            android:layout_height="48dp"
             android:layout_weight="1"
             android:background="@drawable/bg_btn_main_color"
             android:text="发表评论"
