--- a/taixinkanghu/src/main/res/layout/item_rg_main.xml
+++ b/taixinkanghu/src/main/res/layout/item_rg_main.xml
@@ -7,7 +7,7 @@
     <RadioGroup
         android:id="@+id/rg_main"
         android:layout_width="match_parent"
-        android:layout_height="55.0dip"
+        android:layout_height="55dp"
         android:orientation="horizontal">
 
         <RadioButton
