--- a/taixinkanghu/src/main/res/drawable/bg_btn_city_selector.xml
+++ b/taixinkanghu/src/main/res/drawable/bg_btn_city_selector.xml
@@ -14,7 +14,7 @@
     <item android:state_enabled="true" android:state_selected="true">
         <shape>
             <solid android:color="#ffffffff" />
-            <stroke android:width="1.0dip" android:color="@color/main_color" />
+            <stroke android:width="1dp" android:color="@color/main_color" />
         </shape>
     </item>
 </selector>
