--- a/taixinkanghu/src/main/res/drawable/bg_main_input.xml
+++ b/taixinkanghu/src/main/res/drawable/bg_main_input.xml
@@ -4,17 +4,17 @@
     <item android:state_focused="false">
         <shape>
             <solid android:color="@android:color/white" />
-            <stroke android:width="1.0dip" android:color="@color/divider_color" />
-            <padding android:left="10.0dip" android:top="5.0dip" android:right="10.0dip" android:bottom="5.0dip" />
-            <corners android:radius="3.0dip" />
+            <stroke android:width="1dp" android:color="@color/divider_color" />
+            <padding android:left="10dp" android:top="5dp" android:right="10dp" android:bottom="5dp" />
+            <corners android:radius="3dp" />
         </shape>
     </item>
     <item android:state_focused="true">
         <shape>
             <solid android:color="@android:color/white" />
-            <stroke android:width="1.0dip" android:color="@color/main_color" />
-            <padding android:left="10.0dip" android:top="5.0dip" android:right="10.0dip" android:bottom="5.0dip" />
-            <corners android:radius="3.0dip" />
+            <stroke android:width="1dp" android:color="@color/main_color" />
+            <padding android:left="10dp" android:top="5dp" android:right="10dp" android:bottom="5dp" />
+            <corners android:radius="3dp" />
         </shape>
     </item>
 </selector>
