--- a/taixinkanghu/src/main/res/drawable/bg_order_btn.xml
+++ b/taixinkanghu/src/main/res/drawable/bg_order_btn.xml
@@ -6,13 +6,13 @@
             <item>
                 <shape>
                     <solid android:color="@color/main_color" />
-                    <padding android:top="0.5dip" android:bottom="0.5dip" />
+                    <padding android:top="0.5dp" android:bottom="0.5dp" />
                 </shape>
             </item>
             <item>
                 <shape>
                     <solid android:color="@android:color/white" />
-                    <padding android:left="15.0dip" android:right="15.0dip" />
+                    <padding android:left="15dp" android:right="15dp" />
                 </shape>
             </item>
         </layer-list>
@@ -22,13 +22,13 @@
             <item>
                 <shape>
                     <solid android:color="@color/main_color" />
-                    <padding android:top="0.5dip" android:bottom="0.5dip" />
+                    <padding android:top="0.5dp" android:bottom="0.5dp" />
                 </shape>
             </item>
             <item>
                 <shape>
                     <solid android:color="#ffeeeeee" />
-                    <padding android:left="15.0dip" android:right="15.0dip" />
+                    <padding android:left="15dp" android:right="15dp" />
                 </shape>
             </item>
         </layer-list>
