--- a/taixinkanghu/src/main/res/drawable/bg_pay_icon.xml
+++ b/taixinkanghu/src/main/res/drawable/bg_pay_icon.xml
@@ -2,5 +2,5 @@
 <shape
   xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/main_bg_color" />
-    <corners android:radius="3.0dip" />
+    <corners android:radius="3dp" />
 </shape>
