--- a/taixinkanghu/src/main/res/drawable/bg_worker_list.xml
+++ b/taixinkanghu/src/main/res/drawable/bg_worker_list.xml
@@ -5,7 +5,7 @@
             <item>
                 <shape>
                     <solid android:color="@color/divider_color" />
-                    <padding android:bottom="1.0dip"/>
+                    <padding android:bottom="1dp"/>
                 </shape>
             </item>
             <item>
@@ -20,7 +20,7 @@
             <item>
                 <shape>
                     <solid android:color="@color/divider_color" />
-                    <padding android:bottom="1.0dip" />
+                    <padding android:bottom="1dp" />
                 </shape>
             </item>
             <item>
