--- a/taixinkanghu/src/main/res/drawable/rg_tick.xml
+++ b/taixinkanghu/src/main/res/drawable/rg_tick.xml
@@ -5,7 +5,7 @@
             <item>
                 <shape android:shape="oval">
                     <solid android:color="@android:color/white" />
-                    <stroke android:width="0.5dip" android:color="@color/divider_color" />
+                    <stroke android:width="0.5dp" android:color="@color/divider_color" />
                 </shape>
             </item>
         </layer-list>
@@ -15,7 +15,7 @@
             <item>
                 <shape android:shape="oval">
                     <solid android:color="@color/main_color" />
-                    <padding android:bottom="4.0dip" android:left="4.0dip" android:right="4.0dip" android:top="4.0dip" />
+                    <padding android:bottom="4dp" android:left="4dp" android:right="4dp" android:top="4dp" />
                 </shape>
             </item>
             <item android:drawable="@mipmap/ic_pay_select" />
