--- a/taixinkanghu/src/main/res/layout/activity_my_setting.xml
+++ b/taixinkanghu/src/main/res/layout/activity_my_setting.xml
@@ -10,14 +10,14 @@
         android:id="@id/item_phone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="10.0dip"
+        android:layout_marginTop="10dp"
         android:layout_weight="1"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="54.0dip"
-            android:layout_marginTop="10.0dip"
+            android:layout_height="54dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/bg_bule_frame"
             android:gravity="center_vertical"
             android:layout_gravity="center_vertical"
@@ -27,8 +27,8 @@
                 android:id="@+id/btn_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dip"
-                android:layout_marginRight="15dip"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -42,7 +42,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:layout_marginRight="20dip"
+                    android:layout_marginRight="20dp"
                     android:text="登录"
                     android:gravity="right"
                     android:textColor="@color/text_color_black"
