--- a/taixinkanghu/src/main/res/layout/activity_my_wealth.xml
+++ b/taixinkanghu/src/main/res/layout/activity_my_wealth.xml
@@ -10,7 +10,7 @@
         android:id="@id/item_phone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="10.0dip"
+        android:layout_marginTop="10dp"
         android:layout_weight="1"
         android:orientation="vertical">
 
@@ -18,7 +18,7 @@
             android:id="@+id/my_score"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10.0dip"
+            android:layout_marginTop="10dp"
             android:background="@drawable/bg_order_btn"
             android:gravity="center_vertical"
             android:orientation="horizontal">
@@ -26,7 +26,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10.0dip"
+                android:layout_marginTop="10dp"
                 android:gravity="center_vertical"
                 android:layout_weight="1"
                 android:orientation="vertical">
@@ -34,7 +34,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10.0dip"
+                    android:layout_marginTop="10dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -60,12 +60,12 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="20.0dip"
-                    android:layout_marginLeft="10.0dip"
-                    android:layout_marginTop="5.0dip"
+                    android:layout_marginBottom="20dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
                     android:hint="提示：每1积分等于1分钱，可以再。。。"
                     android:textColorHint="@color/text_color_gray"
-                    android:textSize="12dip"
+                    android:textSize="12dp"
                     android:visibility="visible" />
 
 
@@ -74,11 +74,11 @@
             <TextView
                 android:layout_width="20dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10.0dip"
+                android:layout_marginLeft="10dp"
                 android:gravity="center_vertical"
                 android:textStyle="bold"
                 android:hint=">"
-                android:textSize="18dip"/>
+                android:textSize="18dp"/>
 
 
         </LinearLayout>
@@ -88,7 +88,7 @@
     <Button
         android:id="@id/btn_goto_main"
         android:layout_width="match_parent"
-        android:layout_height="48.0dip"
+        android:layout_height="48dp"
         android:background="@drawable/bg_btn_main_color"
         android:text="首页"
         android:textColor="#ffffffff"
