--- a/taixinkanghu/src/main/res/layout/activity_nurs_order.xml
+++ b/taixinkanghu/src/main/res/layout/activity_nurs_order.xml
@@ -19,14 +19,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="10.0dip"
+                android:layout_marginTop="10dp"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:id="@+id/btn_screening"
                     android:layout_width="match_parent"
-                    android:layout_height="54.0dip"
-                    android:layout_marginTop="10.0dip"
+                    android:layout_height="54dp"
+                    android:layout_marginTop="10dp"
                     android:background="@drawable/bg_bule_frame"
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
@@ -36,7 +36,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1.0"
                         android:text="筛选条件:"
-                        android:layout_marginLeft="15dip"
+                        android:layout_marginLeft="15dp"
                         android:textColor="@color/text_color_black"
                         android:textSize="16.0sp" />
 
@@ -54,9 +54,9 @@
                         android:id="@id/phone_arrow"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10.0dip"
+                        android:layout_marginLeft="10dp"
                         android:hint="V"
-                        android:layout_marginRight="15dip"
+                        android:layout_marginRight="15dp"
                         android:textColorHint="@color/text_color_gray"
                         android:textSize="18.0sp"
                         android:visibility="visible" />
