--- a/taixinkanghu/src/main/res/layout/activity_question_feedback.xml
+++ b/taixinkanghu/src/main/res/layout/activity_question_feedback.xml
@@ -19,8 +19,8 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="44.0dip"
-                android:layout_marginLeft="30dip"
+                android:layout_height="44dp"
+                android:layout_marginLeft="30dp"
                 android:gravity="center_vertical"
                 android:text="欢迎您反馈试用产品的感受和建议"
                 android:textColor="@color/main_color" />
@@ -29,22 +29,22 @@
             <LinearLayout
                 android:id="@+id/btn_open_fragment"
                 android:layout_width="match_parent"
-                android:layout_height="54.0dip"
+                android:layout_height="54dp"
                 android:background="@drawable/bg_bule_frame_all"
                 android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="66.0dip"
-                    android:layout_marginLeft="15dip"
+                    android:layout_height="66dp"
+                    android:layout_marginLeft="15dp"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
                     android:text="联系方式：" />
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="66.0dip"
-                    android:layout_marginRight="15dip"
+                    android:layout_height="66dp"
+                    android:layout_marginRight="15dp"
                     android:gravity="center_vertical"
                     android:text="请您填写 V " />
 
@@ -53,8 +53,8 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="44.0dip"
-                android:layout_marginLeft="30dip"
+                android:layout_height="44dp"
+                android:layout_marginLeft="30dp"
                 android:gravity="center_vertical"
                 android:text="感受和建议"
                 android:textColor="@color/main_color" />
@@ -67,8 +67,8 @@
 
                 <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="66.0dip"
-                    android:layout_marginLeft="15dip"
+                    android:layout_height="66dp"
+                    android:layout_marginLeft="15dp"
                     android:gravity="center_vertical"
                     android:text="问题反馈页面不够出色" />
             </LinearLayout>
@@ -77,22 +77,22 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="48.0dip"
+            android:layout_height="48dp"
             android:background="@color/main_color_mask"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="36.0dip"
+                android:layout_height="36dp"
                 android:orientation="horizontal"
-                android:paddingTop="10dip"
+                android:paddingTop="10dp"
                 android:weightSum="1">
 
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="20dip"
-                    android:layout_marginRight="20dip"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
                     android:layout_weight="0.87"
                     android:background="#00000000"
                     android:gravity="center_vertical"
@@ -105,7 +105,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginRight="20dip"
+                    android:layout_marginRight="20dp"
                     android:background="@mipmap/img_plus"
                     android:gravity="center_vertical"
                     android:visibility="gone" />
@@ -114,9 +114,9 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="0.5dip"
-                android:layout_marginLeft="20dip"
-                android:layout_marginRight="20dip"
+                android:layout_height="0.5dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:background="@color/white"></View>
         </LinearLayout>
     </LinearLayout>
