--- a/taixinkanghu/src/main/res/layout/activity_reviews.xml
+++ b/taixinkanghu/src/main/res/layout/activity_reviews.xml
@@ -9,20 +9,20 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="0.5dip"
+        android:layout_height="0.5dp"
         android:background="#40000000" />
 
     <!--底部功能菜单-->
     <RadioGroup
         android:id="@+id/rg_dingdan"
         android:layout_width="match_parent"
-        android:layout_height="55.0dip"
+        android:layout_height="55dp"
         android:layout_alignParentBottom="true"
         android:background="#fff"
         android:orientation="horizontal">
 
         <View
-            android:layout_width="0.5dip"
+            android:layout_width="0.5dp"
             android:layout_height="match_parent"
             android:background="#40000000" />
 
@@ -36,7 +36,7 @@
             android:textColor="@drawable/text_color_page_tab" />
 
         <View
-            android:layout_width="0.5dip"
+            android:layout_width="0.5dp"
             android:layout_height="match_parent"
             android:background="#40000000" />
 
@@ -50,7 +50,7 @@
             android:textColor="@drawable/text_color_page_tab" />
 
         <View
-            android:layout_width="0.5dip"
+            android:layout_width="0.5dp"
             android:layout_height="match_parent"
             android:background="#40000000" />
 
@@ -64,7 +64,7 @@
             android:textColor="@drawable/text_color_page_tab" />
 
         <View
-            android:layout_width="0.5dip"
+            android:layout_width="0.5dp"
             android:layout_height="match_parent"
             android:background="#40000000" />
 
@@ -77,7 +77,7 @@
         android:layout_height="match_parent"
         android:background="@color/white"
         android:divider="@color/divider_color"
-        android:dividerHeight="0.5dip"
+        android:dividerHeight="0.5dp"
         android:listSelector="@drawable/bg_btn_translucent"
         android:scrollbars="none"
         android:choiceMode="singleChoice">
