--- a/taixinkanghu/src/main/res/layout/activity_service_info.xml
+++ b/taixinkanghu/src/main/res/layout/activity_service_info.xml
@@ -12,8 +12,8 @@
 
     <ImageButton
         android:id="@id/btn_back"
-        android:layout_width="48.0dip"
-        android:layout_height="48.0dip"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:background="@drawable/bg_btn_translucent"
         android:src="@mipmap/btn_back" />
 
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
-        android:layout_marginBottom="20dip"
+        android:layout_marginBottom="20dp"
         android:gravity="center_horizontal"
         android:orientation="horizontal">
 
