--- a/taixinkanghu/src/main/res/layout/fragment_contact_information.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_contact_information.xml
@@ -8,20 +8,20 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="146dip">
+        android:layout_height="146dp">
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="55dip"
+        android:layout_height="55dp"
         android:background="@color/white"
         android:orientation="horizontal">
 
         <RadioGroup
             android:id="@+id/rg_main"
             android:layout_width="match_parent"
-            android:layout_height="55.0dip"
+            android:layout_height="55dp"
             android:orientation="horizontal">
 
             <RadioButton
@@ -61,17 +61,17 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dip"
+        android:layout_height="50dp"
         android:background="@drawable/bg_bule_frame_all">
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dip"
-            android:layout_marginRight="30dip"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
             android:layout_gravity="center_vertical"
             android:hint="请输入联系方式"
-            android:textSize="16dip"
+            android:textSize="16dp"
             android:background="#00000000"
             android:gravity="left"
             android:singleLine="true"
