--- a/taixinkanghu/src/main/res/layout/fragment_mine.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_mine.xml
@@ -22,8 +22,8 @@
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="200dip"
-            android:layout_height="280dip"
+            android:layout_width="200dp"
+            android:layout_height="280dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
@@ -72,7 +72,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="55dip"
+        android:layout_height="55dp"
         android:background="#00000000">
 
     </LinearLayout>
