--- a/taixinkanghu/src/main/res/layout/fragment_select_date.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_select_date.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="93dip"
+        android:layout_height="93dp"
         android:background="#00000000"></LinearLayout>
 
     <LinearLayout
@@ -18,7 +18,7 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="40.0dip"
+            android:layout_height="40dp"
             android:layout_weight="1.0"
             android:gravity="center"
             android:text="开始时间"
@@ -26,13 +26,13 @@
             android:textSize="14.0sp" />
 
         <View
-            android:layout_width="0.5dip"
+            android:layout_width="0.5dp"
             android:layout_height="match_parent"
             android:background="@color/divider_color" />
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="40.0dip"
+            android:layout_height="40dp"
             android:layout_weight="1.0"
             android:gravity="center"
             android:text="结束时间"
@@ -42,7 +42,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="0.5dip"
+        android:layout_height="0.5dp"
         android:background="@color/divider_color" />
 
     <LinearLayout
@@ -58,7 +58,7 @@
             android:layout_weight="1.0" />
 
         <View
-            android:layout_width="0.5dip"
+            android:layout_width="0.5dp"
             android:layout_height="match_parent"
             android:background="@color/divider_color" />
 
@@ -72,7 +72,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="0.5dip"
+        android:layout_height="0.5dp"
         android:background="@color/divider_color" />
 
     <LinearLayout
@@ -84,7 +84,7 @@
         <Button
             android:id="@id/btn_cancel"
             android:layout_width="match_parent"
-            android:layout_height="40.0dip"
+            android:layout_height="40dp"
             android:layout_weight="1.0"
             android:background="@drawable/bg_btn_white"
             android:gravity="center"
@@ -93,14 +93,14 @@
             android:textSize="14.0sp" />
 
         <View
-            android:layout_width="0.5dip"
+            android:layout_width="0.5dp"
             android:layout_height="match_parent"
             android:background="@color/divider_color" />
 
         <Button
             android:id="@id/btn_confirm"
             android:layout_width="match_parent"
-            android:layout_height="40.0dip"
+            android:layout_height="40dp"
             android:layout_weight="1.0"
             android:background="@drawable/bg_btn_white"
             android:gravity="center"
@@ -111,7 +111,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="0.5dip"
+        android:layout_height="0.5dp"
         android:background="@color/divider_color" />
 
     <TextView
@@ -119,14 +119,14 @@
         android:layout_height="wrap_content"
         android:background="#ffffffff"
         android:gravity="center"
-        android:padding="5.0dip"
+        android:padding="5dp"
         android:text="注：开始时间的早上9：00到次日早上9：00为一天"
         android:textColor="@color/text_color_gray"
         android:textSize="13.0sp" />
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="0.5dip"
+        android:layout_height="0.5dp"
         android:background="@color/divider_color" />
 
     <View
