--- a/taixinkanghu/src/main/res/layout/fragment_select_screening.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_select_screening.xml
@@ -6,12 +6,12 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="138dip"
+        android:layout_height="138dp"
         android:background="#00000000"></LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dip"
+        android:layout_height="200dp"
         android:background="#fff"
         android:orientation="horizontal">
 
@@ -23,12 +23,12 @@
             android:background="#ffffffff"
             android:choiceMode="singleChoice"
             android:divider="@color/divider_color"
-            android:dividerHeight="0.100000024dip"
+            android:dividerHeight="0.100000024dp"
             android:listSelector="@drawable/bg_btn_translucent"
             android:scrollbars="none" />
 
         <View
-            android:layout_width="0.100000024dip"
+            android:layout_width="0.100000024dp"
             android:layout_height="match_parent"
             android:background="@color/divider_color" />
 
@@ -39,19 +39,19 @@
             android:layout_weight="1.0"
             android:background="#ffffffff"
             android:divider="@color/divider_color"
-            android:dividerHeight="0.100000024dip"
+            android:dividerHeight="0.100000024dp"
             android:listSelector="@drawable/bg_btn_translucent" />
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="0.5dip"
+        android:layout_height="0.5dp"
         android:background="@color/divider_color" />
 
     <Button
         android:id="@id/reset"
         android:layout_width="match_parent"
-        android:layout_height="40.0dip"
+        android:layout_height="40dp"
         android:layout_weight="0.0"
         android:background="@drawable/bg_btn_white"
         android:text="重置"
