--- a/taixinkanghu/src/main/res/layout/fragment_select_sort.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_select_sort.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="138dip"
+        android:layout_height="138dp"
         android:background="#00000000"></LinearLayout>
 
     <ListView
@@ -17,13 +17,13 @@
         android:background="#ffffffff"
         android:choiceMode="singleChoice"
         android:divider="@color/divider_color"
-        android:dividerHeight="0.100000024dip"
+        android:dividerHeight="0.100000024dp"
         android:listSelector="@drawable/bg_btn_translucent"
         android:scrollbars="none" />
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="0.5dip"
+        android:layout_height="0.5dp"
         android:background="@color/divider_color" />
 
     <View
