--- a/taixinkanghu/src/main/res/layout/fragment_select_the_way.xml
+++ b/taixinkanghu/src/main/res/layout/fragment_select_the_way.xml
@@ -15,7 +15,7 @@
     <TextView
         android:id="@+id/find"
         android:layout_width="match_parent"
-        android:layout_height="48.0dip"
+        android:layout_height="48dp"
         android:background="@drawable/bg_order_btn"
         android:gravity="center"
         android:text="我自己选护理员"
@@ -25,8 +25,8 @@
     <TextView
         android:id="@+id/recommend"
         android:layout_width="match_parent"
-        android:layout_height="48.0dip"
-        android:layout_marginTop="-0.5dip"
+        android:layout_height="48dp"
+        android:layout_marginTop="-0.5dp"
         android:background="@drawable/bg_order_btn"
         android:gravity="center"
         android:text="请泰心给我推荐"
