--- a/taixinkanghu/src/main/res/layout/include_header.xml
+++ b/taixinkanghu/src/main/res/layout/include_header.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="48.0dip"
+    android:layout_height="48dp"
     android:background="@color/main_color">
 
     <ImageButton
         android:id="@id/btn_back"
-        android:layout_width="48.0dip"
-        android:layout_height="48.0dip"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:background="@drawable/bg_btn_translucent"
         android:src="@mipmap/btn_back"
         android:visibility="visible" />
