--- a/taixinkanghu/src/main/res/layout/include_main_button.xml
+++ b/taixinkanghu/src/main/res/layout/include_main_button.xml
@@ -8,7 +8,7 @@
     <Button
         android:id="@id/btn_goto_main"
         android:layout_width="match_parent"
-        android:layout_height="48.0dip"
+        android:layout_height="48dp"
         android:background="@drawable/bg_btn_main_color"
         android:text="首页"
         android:textColor="#ffffffff"
