--- a/taixinkanghu/src/main/res/layout/item_worker_list.xml
+++ b/taixinkanghu/src/main/res/layout/item_worker_list.xml
@@ -13,17 +13,17 @@
         android:layout_gravity="center_horizontal"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:padding="10.0dip">
+        android:padding="10dp">
 
         <com.taixinkanghu.widget.circleimageview.CircleImageView
             android:id="@+id/pic"
-            android:layout_width="65.0dip"
-            android:layout_height="65.0dip"
-            android:layout_marginLeft="5.0dip"
-            android:layout_marginRight="10.0dip"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="10dp"
             android:src="@mipmap/face_img"
             app:border_color="@color/main_color"
-            app:border_width="0.5dip" />
+            app:border_width="0.5dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -33,7 +33,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="2.0dip"
+                android:layout_marginBottom="2dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -41,7 +41,7 @@
                     android:id="@id/name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="5.0dip"
+                    android:layout_marginRight="5dp"
                     android:text="王瑾瑜"
                     android:textColor="@color/text_color_black"
                     android:textSize="16.0sp" />
@@ -49,7 +49,7 @@
                 <RatingBar
                     android:id="@id/star"
                     android:layout_width="wrap_content"
-                    android:layout_height="15.0dip"
+                    android:layout_height="15dp"
                     android:isIndicator="true"
                     android:numStars="5"
                     android:progressDrawable="@drawable/rating_bar"
@@ -59,9 +59,9 @@
                     android:id="@+id/price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="-5.0dip"
-                    android:layout_marginRight="3.0dip"
-                    android:layout_marginTop="-5.0dip"
+                    android:layout_marginBottom="-5dp"
+                    android:layout_marginRight="3dp"
+                    android:layout_marginTop="-5dp"
                     android:layout_weight="1.0"
                     android:gravity="right"
                     android:text="250"
@@ -80,7 +80,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="3.0dip"
+                android:layout_marginBottom="3dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
@@ -93,10 +93,10 @@
                     android:textSize="13.0sp" />
 
                 <TextView
-                    android:layout_width="0.5dip"
-                    android:layout_height="12.0dip"
-                    android:layout_marginLeft="5.0dip"
-                    android:layout_marginRight="5.0dip"
+                    android:layout_width="0.5dp"
+                    android:layout_height="12dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
                     android:background="@color/divider_color" />
 
                 <TextView
@@ -108,10 +108,10 @@
                     android:textSize="13.0sp" />
 
                 <TextView
-                    android:layout_width="0.5dip"
-                    android:layout_height="12.0dip"
-                    android:layout_marginLeft="5.0dip"
-                    android:layout_marginRight="5.0dip"
+                    android:layout_width="0.5dp"
+                    android:layout_height="12dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
                     android:background="@color/divider_color" />
 
                 <TextView
@@ -133,7 +133,7 @@
                     android:id="@+id/level_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="10.0dip"
+                    android:layout_marginRight="10dp"
                     android:layout_weight="0.0"
                     android:singleLine="true"
                     android:text="中级护理员"
